# fern

./: .gitignore  .travis.yml  0001-Fix-reopen-1-feature-on-Windows.patch  CHANGELOG.md  CONTRIBUTING.md  Cargo.lock.msrv  Cargo.toml  LICENSE  README.md  TODO  appveyor.yml  rustfmt.toml
.github/workflows/: coverage.yml  rust.yml
examples/: cmd-program.rs  colored.rs  date-based-file-log.rs  manual-file-log.rs  meta-logging.rs  pretty-colored.rs  syslog.rs  syslog3.rs  syslog4.rs  syslog5.rs  syslog7.rs
src/: api.rs  builders.rs  colors.rs  config.rs  dispatch.rs  errors.rs  formatter.rs  lib.rs  local.rs  log_impl.rs  logger.rs  loggers.rs  meta.rs  syslog.rs
tests/: channel_logging.rs  doc_test_copy.rs  enabled_is_deep_check.rs  file_logging.rs  global_logging.rs  lib.rs  manual_rotating.rs  meta_logging.rs  panic_logging.rs  reopen_logging.rs  support.rs  write_logging.rs
