[package]
name = "fern"
# Remember to update html_root_url in src/lib.rs with each version.
version = "0.5.8"
authors = ["David Ross <daboross@daboross.net>"]
description = "Simple, efficient logging"

documentation = "https://docs.rs/fern/"
repository = "https://github.com/daboross/fern"
readme = "README.md"

license = "MIT"
keywords = ["log", "logging", "logger"]
categories = ["development-tools::debugging"]

include = ["Cargo.toml", "src/**/*", "tests/**/*", "examples/**/*", "LICENSE", "README.md", "CONTRIBUTING.md", "CHANGELOG.md"]

[badges]
travis-ci = { repository = "daboross/fern" }
appveyor = { repository = "daboross/fern" }
coveralls = { repository = "daboross/fern" }

[dependencies]
log = { version = "0.4", features = ["std"] }
colored = { version = "1.5", optional = true }
chrono = "0.4"

[target."cfg(not(windows))".dependencies]
syslog3 = { version = "3", optional = true }
syslog = { version = "4", optional = true }

[features]
syslog-3 = ["syslog3"]
syslog-4 = ["syslog"]
meta-logging-in-format = []

[dev-dependencies]
tempdir = "0.3"
chrono = "0.4"
clap = "2.22"

[[example]]
name = "cmd-program"

[[example]]
name = "date-based-file-log"

[[example]]
name = "colored"
required-features = ["colored"]

[[example]]
name = "pretty-colored"
required-features = ["colored"]

[[example]]
name = "syslog"
required-features = ["syslog-4"]

[[example]]
name = "syslog3"
required-features = ["syslog-3"]

[[example]]
name = "meta-logging"

[package.metadata.docs.rs]
all-features = true
